src/objects/Apttus__QueryTemplate__c.object
<CustomObject>
    <description>Query Template for bulding soql queries and filters</description>
    <fields>
        <fullName>Apttus__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Template active indicator. Inactive templates are ignored by the template selection process</description>
        <inlineHelpText>Indicates whether the template is active. Inactive templates are ignored.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__Description__c</fullName>
        <description>Template description</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__SObjectLabel__c</fullName>
        <description>Specifies the object to query</description>
        <inlineHelpText>The object to query</inlineHelpText>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement Template</fullName>
                    <default>true</default>
                    <label>Agreement Template</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__SObjectType__c</fullName>
        <description>Specifies the type of the object to query</description>
        <inlineHelpText>The object type to query</inlineHelpText>
        <label>SObject Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus__SObjectLabel__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Apttus__APTS_Template__c</fullName>
                    <default>true</default>
                    <label>Apttus__APTS_Template__c</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Sequence__c</fullName>
        <description>Template sequence</description>
        <inlineHelpText>Template sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Type__c</fullName>
        <description>Specifies the query template type</description>
        <inlineHelpText>Filter type</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement Template Filter</fullName>
                    <default>true</default>
                    <label>Agreement Template Filter</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Query Template</label>
    <listViews>
        <fullName>Apttus__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QT-{0000}</displayFormat>
        <label>Query Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Query Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>